# CMD_AIengineering

./: QUICKSTART.md  README.md  app.py  gitignore  pyproject.toml  requirements.txt  test_scenarios.md
